--- a/Packages/ga.fuquna.unityutil/UnityUtil.asmdef
+++ b/Packages/ga.fuquna.unityutil/UnityUtil.asmdef
@@ -1,6 +1,9 @@
 {
     "name": "ga.fuquna.unityutil",
-    "references": [],
+    "rootNamespace": "",
+    "references": [
+        "GUID:15fc0a57446b3144c949da3e2b9737a9"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
@@ -8,6 +11,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.render-pipelines.universal",
+            "expression": "",
+            "define": "USE_URP"
+        }
+    ],
     "noEngineReferences": false
 }
